--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,9 @@
     <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
     <script src="js/index.js" type="text/javascript"></script>
 
+    <link rel="stylesheet" type="text/css" href="index.css"/>
+
+    <!-- Bootstrap CSS -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -15,6 +18,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
             integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
             crossorigin="anonymous"></script>
+
+    <!-- jQuery modal -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+
     <meta charset="UTF-8">
     <title>Medovichkovv</title>
 </head>
@@ -27,12 +35,17 @@
     <table id="recipes_table" class="table table-hover">
         <thead class="thead-inverse">
         <tr>
-            <th>ID</th>
             <th>Name</th>
             <th>Is favorite</th>
+            <th>Privacy type</th>
         </tr>
         </thead>
     </table>
 
+    <div id="recipe_id" >
+        <div>Recipe</div>
+        <div id="recipe_description"></div>
+        <a href="#" rel="modal:close">отмена</a>
+    </div>
 </body>
 </html>
